--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 jsongen
 =======
 
-JSON instances generation and validation from JSON Schema and other JSON data descriptions
+A library for generating JSON data from descriptions of data
+in the JSON Schema format. 
+
+See http://babel.ls.fi.upm.es/~fred/jsongen/
+for API information.
+
